Implement reservation approval and device selection for administrators
- Added backend support for managing reservation approval (`nehmeReservierungAn`) and retrieving available devices.
- Introduced REST endpoints for fetching pending reservations, available devices, and approving reservations.
- Developed new frontend module `reservierungsAntraege.js` for managing reservations, including device selection and form handling.
- Updated styles and HTML to support new reservation management features.
- Refactored code structure by consolidating reservation logic into `DBaccess_Reservierungsverwaltung` and `DBaccess_Ausleiheverwaltung`.